syntax = "proto3";

package streaming;

option go_package = "baremetal-ctl/proto";

import "google/protobuf/timestamp.proto";

service StreamingService {
    rpc StreamServerTime(StreamServerTimeRequest) returns (stream StreamServerTimeResponse);
}

message StreamServerTimeRequest {
    int32 interval_seconds = 1;
}

message StreamServerTimeResponse {
    google.protobuf.Timestamp current_time = 1;
}

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/streaming.proto